fix for image and spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -148,7 +148,6 @@ section {
 
 .headshot img {
   clip-path: circle(46.23% at 49.89% 47.7%);
-  width: 100%;
   height: 300px;
 }
 .flex-salutation {
@@ -168,7 +167,6 @@ button img {
   height: 95vh;
 }
 .salutation {
-  flex-grow: 2;
   margin-left: 30px;
 }
 .sizer {
